chore: removed wrong import

--- a/.github/workflows/ycai_pull_request.yml
+++ b/.github/workflows/ycai_pull_request.yml
@@ -49,6 +49,10 @@ jobs:
       - name: Lint code
         run: npm run lint
 
+      - name: Build shared
+        working-directory: ./shared
+        run: npm run build
+
       - name: Build
         run: npm run build
 
