--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -21,8 +21,9 @@
     "build": "tsc --build && NODE_ENV=production webpack",
     "build:dev": "tsc --build && webpack",
     "watch:ext": "webpack -c webpack.extension.config.js -w",
+    "watch:ext:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch:ext",
     "watch": "webpack serve",
-    "watch:prod": "DOTENV_CONFIG_PATH=.env.production webpack -w",
+    "watch:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
     "prepack": "npm run build",
