fix: less generic webpack shared config

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "clean": "cd shared && npm run clean && cd ../YCAI && npm run clean",
-    "lint": "cd ../YCAI && npm run lint",
+    "lint": "cd ./YCAI && npm run lint",
     "test": "jest",
     "preinstall": "cd shared && npm i && cd ../backend && npm i && cd ../YCAI && npm i"
   },
