fix: extension build

--- a/YCAI/public/manifest.json
+++ b/YCAI/public/manifest.json
@@ -37,7 +37,7 @@
       "matches": [
         "https://*.youtube.com/*"
       ],
-      "js": ["./app.js"]
+      "js": ["./ext.js"]
     }
   ],
 
