fix: use ts for webpack config

--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -14,13 +14,13 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "lint": "eslint ./src",
-    "format": "prettier -w ./src config-overrides.js",
+    "format": "prettier -w ./src",
     "tsc": "tsc",
-    "build:ext": "tsc --build && NODE_ENV=production webpack -c webpack.extension.config.js",
-    "build:ext:dev": "tsc --build && webpack -c webpack.extension.config.js",
+    "build:ext": "tsc --build && NODE_ENV=production webpack -c webpack.extension.config.ts",
+    "build:ext:dev": "tsc --build && webpack -c webpack.extension.config.ts",
     "build": "tsc --build && NODE_ENV=production webpack",
     "build:dev": "tsc --build && webpack",
-    "watch:ext": "webpack -c webpack.extension.config.js -w",
+    "watch:ext": "webpack -c webpack.extension.config.ts -w",
     "watch:ext:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch:ext",
     "watch": "webpack serve",
     "watch:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch",
@@ -38,6 +38,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/bs58": "^4.0.1",
     "@types/chrome": "0.0.157",
+    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.3",
     "@types/react": "^16.14.20",
@@ -47,7 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "buffer": "^6.0.3",
-    "copy-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
@@ -69,6 +70,7 @@
     "svgdom": "^0.1.10",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "webpack": "^5.64.1",
     "webpack-bundle-analyzer": "^4.5.0",
