--- a/YCAI/tsconfig.json
+++ b/YCAI/tsconfig.json
@@ -30,7 +30,7 @@
       "path": "../shared"
     }
   ],
-  "include": ["./webpack.config.ts", "./webpack.extension.config.ts"],
+  "include": ["./src", "./webpack.config.ts", "./webpack.extension.config.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
