feat:  dashboard and extension splitting (#202)

--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -14,20 +14,22 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "lint": "eslint ./src",
-    "format": "prettier -w ./src config-overrides.js",
+    "format": "prettier -w ./src",
     "tsc": "tsc",
+    "build:ext": "tsc --build && NODE_ENV=production webpack -c webpack.extension.config.ts",
+    "build:ext:dev": "tsc --build && webpack -c webpack.extension.config.ts",
     "build": "tsc --build && NODE_ENV=production webpack",
-    "build:dev": "webpack",
-    "watch": "webpack -w",
-    "watch:prod": "DOTENV_CONFIG_PATH=.env.production webpack -w",
+    "build:dev": "tsc --build && webpack",
+    "watch:ext": "webpack -c webpack.extension.config.ts -w",
+    "watch:ext:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch:ext",
+    "watch": "webpack serve",
+    "watch:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
     "prepack": "npm run build",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
@@ -36,20 +38,21 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/bs58": "^4.0.1",
     "@types/chrome": "0.0.157",
+    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.3",
     "@types/react": "^16.14.20",
     "@types/react-dom": "^16.9.14",
     "@types/react-test-renderer": "^16.0.0",
     "@types/swagger-ui": "^3.52.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "buffer": "^6.0.3",
-    "copy-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.2",
@@ -67,10 +70,12 @@
     "svgdom": "^0.1.10",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "webpack": "^5.64.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0",
     "zenroom": "^2.2.1"
   },
   "dependencies": {
@@ -92,7 +97,7 @@
     "bs58": "^4.0.1",
     "c3": "^0.7.20",
     "date-fns": "^2.25.0",
-    "debug": "^4.3.2",
+    "debug": "^4.3.3",
     "fp-ts": "^2.11.5",
     "i18next": "^21.4.0",
     "io-ts": "^2.2.16",
@@ -110,6 +115,7 @@
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.13.0",
+    "react-use-clipboard": "^1.0.7",
     "swagger-ui": "^4.1.0",
     "ts-endpoint": "^2.0.0",
     "tweetnacl": "^1.0.3",
