--- a/.github/workflows/ycai_pull_request.yml
+++ b/.github/workflows/ycai_pull_request.yml
@@ -49,7 +49,14 @@ jobs:
       - name: Lint code
         run: npm run lint
 
-      - name: Build
+      - name: Build shared
+        working-directory: ./shared
+        run: npm run build
+
+      - name: Build extension
+        run: npm run build:ext
+
+      - name: Build dashboard
         run: npm run build
 
       - name: Test
