--- a/YCAI/.env.production
+++ b/YCAI/.env.production
@@ -3,8 +3,8 @@ BUNDLE_ENABLE_NOTIFY=false
 BUNDLE_TARGET=chrome
 
 # app env
-PUBLIC_URL=/
-API_URL=https://youchoose.tracking.exposed/api
-WEB_URL=https://youchoose.tracking.exposed
+PUBLIC_URL=https://creators.youchoose.ai
+API_URL=https://youchoose.ai/api
+WEB_URL=https://youchoose.ai
 DATA_DONATION_FLUSH_INTERVAL=20000
-LOGGER=@ycai:*
+DEBUG=@yttrex:*
