--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "clean": "cd shared && npm run clean && cd ../YCAI && npm run clean",
-    "lint": "cd backend && npm run lint && cd ../YCAI && npm run lint",
+    "lint": "cd ./YCAI && npm run lint",
     "test": "jest",
     "preinstall": "cd shared && npm i && cd ../backend && npm i && cd ../YCAI && npm i"
   },
@@ -11,7 +11,9 @@
     "husky": "^7.0.4",
     "jest": "^27.4.1",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0"
   },
   "husky": {
     "hooks": {
