--- a/shared/package.json
+++ b/shared/package.json
@@ -26,6 +26,7 @@
     "dotenv-webpack": "^7.0.3",
     "fast-check": "^2.20.0",
     "fast-check-io-ts": "^0.5.0",
+    "react-refresh-typescript": "^2.0.3",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0"
