--- a/shared/package.json
+++ b/shared/package.json
@@ -19,14 +19,24 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^14",
     "@types/webpack-bundle-analyzer": "^4.4.1",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
     "fast-check": "^2.20.0",
     "fast-check-io-ts": "^0.5.0",
+    "filemanager-webpack-plugin": "^6.1.7",
+    "mini-css-extract-plugin": "^1.6.2",
+    "react-refresh": "^0.11.0",
+    "react-refresh-typescript": "^2.0.3",
+    "style-loader": "^3.3.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "type-fest": "^2.8.0",
     "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0"
   }
