--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "buffer": "^6.0.3",
+    "conventional-changelog-conventionalcommits": "^4.6.1",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "eslint": "^8.3.0",
