fix: test environment load

--- a/YCAI/.env.production
+++ b/YCAI/.env.production
@@ -7,4 +7,4 @@ PUBLIC_URL=https://creators.youchoose.ai
 API_URL=https://youchoose.ai/api
 WEB_URL=https://youchoose.ai
 DATA_DONATION_FLUSH_INTERVAL=20000
-DEBUG=@yttrex:*
+DEBUG=@ycai:*
