--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "lib": ["ES2015", "DOM"],
+    "lib": ["ESNext", "DOM"],
     "typeRoots": ["../node_modules/@types", "./node_modules/@types"],
     "outDir": "./build",
     "baseUrl": "./",
