--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -91,15 +91,18 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Install node_modules
+        working-directory: ./
+        run: npm install
+
+      - name: Lint code
+        run: npm run lint
+
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.7.0
         with:
           mongodb-port: 27019
           mongodb-version: ${{ matrix.mongodb-version }}
-
-      - name: Install node_modules
-        working-directory: ./
-        run: npm install
 
       - name: Test
         run: npm test -- --runInBand --forceExit
