chore: replaced all 'npm' commands with 'yarn'

--- a/.github/workflows/ycai_release.yml
+++ b/.github/workflows/ycai_release.yml
@@ -28,12 +28,8 @@ jobs:
         with:
           node-version: "14"
 
-      - name: Install shared dependencies
-        working-directory: shared
-        run: npm ci
-
       - name: Install dependencies
-        run: npm ci
+        run: yarn
 
       - name: Release
         env:
