--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -93,10 +93,10 @@ jobs:
 
       - name: Install node_modules
         working-directory: ./
-        run: npm install
+        run: yarn install
 
       - name: Lint code
-        run: npm run lint
+        run: yarn lint
 
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.7.0
@@ -105,6 +105,4 @@ jobs:
           mongodb-version: ${{ matrix.mongodb-version }}
 
       - name: Test
-        run: npm test -- --runInBand --forceExit
-        env:
-          CI: true
+        run: yarn test --runInBand --forceExit --ci
