--- a/.github/workflows/ycai_pull_request.yml
+++ b/.github/workflows/ycai_pull_request.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Get npm cache directory path
+      - name: Get yarn cache directory path
         id: npm-cache-dir-path
         run: echo "::set-output name=dir::~/.npm"
 
@@ -40,24 +40,21 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install modules
-        working-directory: shared
-        run: npm i
-
-      - name: Install modules
-        run: npm i
+        working-directory: ./
+        run: yarn
 
       - name: Lint code
-        run: npm run lint
+        run: yarn lint
 
       - name: Build shared
         working-directory: ./shared
-        run: npm run build
+        run: yarn build
 
       - name: Build extension
-        run: npm run build:ext
+        run: yarn build:ext
 
       - name: Build dashboard
-        run: npm run build
+        run: yarn build
 
       - name: Test
-        run: npm test
+        run: yarn test
