chore: defined workspace shortcut commands

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "scripts": {
     "clean": "yarn workspaces run clean",
     "lint": "yarn workspaces run lint",
-    "test": "jest"
+    "test": "jest",
+    "shared": "yarn workspace shared",
+    "backend": "yarn workspace backend",
+    "ycai": "yarn workspace YCAI"
   },
   "devDependencies": {
     "husky": "^7.0.4",
