--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -26,7 +26,7 @@
     "watch:prod": "DOTENV_CONFIG_PATH=.env.production npm run watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
-    "prepack": "npm run build",
+    "prepack": "yarn build",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
@@ -34,15 +34,15 @@
     "@semantic-release/exec": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/bs58": "^4.0.1",
     "@types/chrome": "0.0.157",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.3",
-    "@types/react": "^16.14.20",
-    "@types/react-dom": "^16.9.14",
-    "@types/react-test-renderer": "^16.0.0",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
+    "@types/react-test-renderer": "^17",
     "@types/swagger-ui": "^3.52.0",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -60,7 +60,7 @@
     "husky": "^7.0.4",
     "jest-chrome": "^0.7.2",
     "prettier": "^2.4.0",
-    "react-test-renderer": "^16.0.0",
+    "react-test-renderer": "^17",
     "semantic-release": "^18.0.0",
     "style-loader": "^3.3.1",
     "svgdom": "^0.1.10",
@@ -106,10 +106,10 @@
     "nacl": "^0.1.3",
     "newtype-ts": "^0.3.4",
     "postcss": "^8.3.11",
-    "react": "^16.14.0",
+    "react": "^17",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17",
     "react-i18next": "^11.13.0",
     "react-use-clipboard": "^1.0.7",
     "swagger-ui": "^4.1.0",
