--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "backend",
     "YCAI"
   ],
-  "packageManager": "yarn@1.22.15",
+  "packageManager": "yarn@3.1.1",
   "scripts": {
     "clean": "yarn workspaces run clean",
     "lint": "yarn workspaces run lint",
@@ -20,12 +20,12 @@
     "ycai": "yarn workspace youchoose.ai"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "husky": "^7.0.4",
     "jest": "^27.4.1",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2",
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0"
+    "typescript": "^4.5.2"
   },
   "husky": {
     "hooks": {
