--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,12 @@
   "version": "1.7.5",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "key=fuffa DEBUG=*,-express:*,-body-parser:*,-follow-redirects node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
-    "start": "gitlog=`git log -30 --stat --oneline --decorate --graph` DEBUG=*,-body-parser:*,-express:*,-lib:*,-follow-redirects ts-node -r tsconfig-paths/register bin/server",
-    "parserv": "DEBUG=*,-pubtimeAPI node_modules/.bin/ts-node bin/parserv2.js",
-    "parserv:watch": "DEBUG=*,-pubtimeAPI node_modules/.bin/ts-node-dev --respawn --transpile-only bin/parserv2.js",
+    "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-follow-redirects\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
+    "start": "gitlog=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
+    "parserv": "DEBUG=\"*,-pubtimeAPI\" ts-node bin/parserv2.js",
+    "parserv:watch": "DEBUG=\"*,-pubtimeAPI\" ts-node-dev --respawn --transpile-only bin/parserv2.js",
     "leaveserv": "DEBUG=* node bin/leaveserv.js",
-    "leaveserv:watch": "DEBUG=* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/leaveserv.js",
+    "leaveserv:watch": "DEBUG=* ts-node-dev --respawn --transpile-only bin/leaveserv.js",
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
