chore: disable npm in root package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "description": "installs all the YCAI dependencies and YCAI",
   "license": "AGPL-3.0",
   "engines": {
-    "node": "14"
+    "node": ">= 14",
+    "npm": "use yarn!",
+    "yarn": ">= 3"
   },
   "private": true,
   "workspaces": [
