--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youchoose.ai",
+  "name": "YCAI",
   "version": "1.9.0-beta.3",
   "description": "YouChoose AI",
   "homepage": "https://youchoose.ai",
