--- a/YCAI/.env
+++ b/YCAI/.env
@@ -6,5 +6,5 @@ BUNDLE_ENABLE_NOTIFY=false
 PUBLIC_URL=http://localhost:3000
 API_URL=http://localhost:9000/api
 WEB_URL=http://localhost:3000
-DATA_DONATION_FLUSH_INTERVAL=10000
-DEBUG=@ycai:*
+DATA_DONATION_FLUSH_INTERVAL=4000
+DEBUG=@yttrex:*
