--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
   "jest.jestCommandLine": "yarn test",
-  "jest.autoRun": {
-    "watch": false,
-    "onSave": "test-file"
-  }
+  "jest.autoRun": "off",
+  "eslint.workingDirectories": ["./shared", "./backend", "./YCAI"]
 }
