--- a/backend/package.json
+++ b/backend/package.json
@@ -17,31 +17,32 @@
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.19.0",
     "bs58": "^3.1.0",
     "chardet": "^1.4.0",
     "cookie": "^0.3.1",
-    "cors": "^2.8.1",
-    "debug": "^4.3.2",
-    "express": "^4.14.0",
-    "fetch-opengraph": "^1.0.30",
+    "cors": "^2.8.5",
+    "date-fns": "^2.27.0",
+    "debug": "^4.3.3",
+    "express": "^4.17.1",
+    "fetch-opengraph": "^1.0.35",
     "food-words": "^1.1.0",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
-    "jsdom": "^13.0.0",
+    "jsdom": "^13.2.0",
     "moment": "^2.29.1",
-    "mongodb": "^4.1.4",
+    "mongodb": "^4.2.1",
     "nacl-signature": "^1.0.0",
-    "nconf": "^0.8.4",
-    "node-fetch": "^2.6.1",
+    "nconf": "^0.8.5",
+    "node-fetch": "^2.6.6",
     "node-libcurl": "^2.3.3",
     "numeral": "^2.0.6",
     "ts-endpoint": "^2.0.0",
     "ts-io-error": "^2.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "tweetnacl": "^0.14.3"
+    "tweetnacl": "^0.14.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -50,18 +51,18 @@
     "@types/nconf": "^0.10.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "jest": "^27.3.1",
+    "eslint-plugin-promise": "^5.2.0",
+    "jest": "^27.4.4",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^27.1.1",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.3"
   }
 }
