--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -1,10 +1,9 @@
 {
   "name": "YCAI",
-  "version": "1.9.0-beta.3",
+  "version": "1.9.0",
   "description": "YouChoose AI",
   "homepage": "https://youchoose.ai",
-  "bugs": "https://github.com/tracking-exposed/YCAI/issues",
-  "private": true,
+  "bugs": "https://github.com/tracking-exposed/yttrex/issues",
   "license": "AGPL-3.0",
   "author": "Read the CREDITS file in the repository linked in https://youchoose.ai",
   "repository": {
