--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -11,70 +11,7 @@ on:
       - "backend/**"
 
 jobs:
-  # install:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       node-version: [12.x]
-  #   defaults:
-  #     run:
-  #       working-directory: ./backend
-  #   steps:
-  #     - uses: actions/checkout@v2
-
-  #     - name: Get npm cache directory path
-  #       id: npm-cache-dir-path
-  #       run: echo "::set-output name=dir::~/.npm"
-
-  #     - uses: actions/cache@v2
-  #       id: npm-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-  #       with:
-  #         path: ${{ steps.npm-cache-dir-path.outputs.dir }}
-  #         key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-npm-
-
-  #     - name: Install modules
-  #       # if: steps.yarn-cache.outputs.cache-hit != 'true'
-  #       run: npm install
-
-  #     - uses: actions/cache@v2
-  #       with:
-  #         path: "**/node_modules"
-  #         key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   needs: [install]
-  #   steps:
-  #     - uses: actions/checkout@v2
-
-  #     - uses: actions/cache@v2
-  #       with:
-  #         path: '**/node_modules'
-  #         key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-
-  #     - name: Lint code
-  #       run: npm run lint
-
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs: [install]
-  #   defaults:
-  #     run:
-  #       working-directory: ./backend
-  #   steps:
-  #     - uses: actions/checkout@v2
-
-  #     - uses: actions/cache@v2
-  #       with:
-  #         path: '**/node_modules'
-  #         key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-
-  #     - name: Build
-  #       run: npm run build
-
-  test:
+  pull_request:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -94,7 +31,10 @@ jobs:
         run: yarn
 
       - name: Lint code
-        run: yarn lint
+        run: yarn backend lint
+
+      - name: Build backend
+        run: yarn backend build
 
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.7.0
