--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "jest",
     "shared": "yarn workspace shared",
     "backend": "yarn workspace yttrex-backend",
-    "ycai": "yarn workspace YCAI"
+    "ycai": "yarn workspace YCAI",
+    "lint-staged": "lint-staged"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
@@ -29,12 +30,16 @@
     "eslint": "^8.4.1",
     "husky": "^7.0.4",
     "jest": "^27.4.4",
+    "lint-staged": "^12.1.2",
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.3"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run lint"
-    }
+  "lint-staged": {
+    "**/src/**/*.{ts,tsx}": [
+      "eslint --ext .tsx --ext .ts ./src --fix"
+    ],
+    "**/src/**": [
+      "prettier --write ."
+    ]
   }
 }
