--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "body-parser": "^1.19.0",
     "bs58": "^3.1.0",
     "chardet": "^1.4.0",
@@ -36,7 +37,6 @@
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.5",
     "node-fetch": "^2.6.6",
-    "node-libcurl": "^2.3.3",
     "numeral": "^2.0.6",
     "ts-endpoint": "^2.0.0",
     "ts-io-error": "^2.0.0",
