--- a/.github/workflows/ycai_release.yml
+++ b/.github/workflows/ycai_release.yml
@@ -19,16 +19,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          submodules: recursive
-          persist-credentials: false
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "14"
+          cache: "yarn"
+          cache-dependency-path: yarn.lock
 
       - name: Install dependencies
+        working-directory: ./
         run: yarn
 
       - name: Release
