feat: node 16 and ci perfs (#252)

--- a/.github/workflows/ycai_release.yml
+++ b/.github/workflows/ycai_release.yml
@@ -4,9 +4,6 @@ on:
     branches:
       - master
       - beta
-    paths:
-      - "shared/**"
-      - "YCAI/**"
 
 defaults:
   run:
@@ -30,6 +27,9 @@ jobs:
       - name: Install dependencies
         working-directory: ./
         run: yarn
+
+      - name: Build dashboard
+        run: yarn build
 
       - name: Release
         env:
