--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "lint-staged": {
     "**/src/**/*.{ts,tsx}": [
-      "eslint --ext .tsx --ext .ts ./src --fix"
+      "eslint --ext .tsx --ext .ts --fix"
     ],
     "**/src/**": [
-      "prettier --write ."
+      "prettier --write"
     ]
   }
 }
