--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "build": "tsc -b",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-follow-redirects\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
-    "start": "gitlog=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
+    "old_start_old": "log=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
+    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
     "parserv": "DEBUG=\"*,-pubtimeAPI\" ts-node bin/parserv2.js",
     "parserv:watch": "DEBUG=\"*,-pubtimeAPI\" ts-node-dev --respawn --transpile-only bin/parserv2.js",
     "leaveserv": "DEBUG=\"*\" node bin/leaveserv.js",
-    "leaveserv:watch": "DEBUG=* ts-node-dev --respawn --transpile-only bin/leaveserv.js",
+    "leaveserv:watch": "DEBUG=\"*\" ts-node-dev --respawn --transpile-only bin/leaveserv.js",
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
