--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "@types/cors": "^2.8.12",
     "@types/jest": "^27.0.3",
     "@types/nconf": "^0.10.1",
+    "@types/node": "^16.11.13",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
