--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "description": "installs all the YCAI dependencies and YCAI",
   "license": "AGPL-3.0",
   "engines": {
-    "node": ">= 14",
+    "node": ">= 16",
     "npm": "use yarn!",
     "yarn": ">= 3"
   },
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/eslint": "^8.2.1",
+    "@types/node": "^16.11.13",
     "eslint": "^8.4.1",
     "husky": "^7.0.4",
     "jest": "^27.4.4",
