--- a/methodology/package.json
+++ b/methodology/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "csv-parse": "^4.15.3",
     "debug": "^4.3.2",
+    "eslint": "^8.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nconf": "^0.11.3",
