--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "typescript": "^4.5.4"
   },
   "lint-staged": {
-    "**/src/**/*.{ts,tsx}": [
+    "*.{ts,tsx}": [
       "eslint --ext .tsx --ext .ts --fix"
     ],
-    "**/src/**": [
+    "*.{json,md,html,js,jsx,ts,tsx}": [
       "prettier --write"
     ]
   }
