--- a/methodology/package.json
+++ b/methodology/package.json
@@ -38,8 +38,10 @@
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/eslint": "^8.2.1",
     "@types/react": "^17.0.37",
     "electron-reload": "^2.0.0-alpha.1",
+    "eslint": "^8.4.1",
     "pkg": "^5.4.1",
     "typescript": "^4.5.4"
   },
