--- a/methodology/package.json
+++ b/methodology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guardoni",
-  "version": "1.8.7",
+  "version": "1.9.0",
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
     "pkg": "pkg ./package.json && sh ./bin/post-compile.sh"
@@ -21,6 +21,7 @@
   "dependencies": {
     "csv-parse": "^4.15.3",
     "debug": "^4.3.2",
+    "eslint": "^8.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nconf": "^0.11.3",
