--- a/methodology/tsconfig.json
+++ b/methodology/tsconfig.json
@@ -2,29 +2,31 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
-    "strict": false,
+    "strict": true,
     "target": "ES3",
     "lib": ["ESNext", "DOM"],
     "jsx": "react",
     "outDir": "./build",
-    "rootDir": "./src",
-    "baseUrl": "./",
+    "rootDir": "./",
+    "baseUrl": "./src",
     "esModuleInterop": true,
-    "typeRoots": [
-      "../node_modules/@types",
-      "node_modules/@types",
-    ],
+    "skipLibCheck": true,
+    // "isolatedModules": true,
+    "typeRoots": ["../node_modules/@types", "node_modules/@types"],
     "paths": {
       "@shared/*": ["../shared/src/*"]
     }
   },
-  "include": [
-    "./src",
-  ],
+  "include": ["./src"],
   "watchOptions": {
     "watchFile": "useFsEvents",
     "watchDirectory": "useFsEvents",
     "synchronousWatchDirectory": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
   },
   "references": [
     {
