--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -9,7 +9,8 @@
     "rootDir": "./src",
     "allowJs": true,
     "tsBuildInfoFile": "./build/.tsbuildinfo",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "jsx": "react"
   },
   "include": ["./src"]
 }
