imported prototypal version of guardoni, renamed as guardoni0

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ extension/dist/*
 extension/node_modules/*
 
 backend/node_modules/*
+backend/downloads/*
+
+methodology/node_modules/*
+methodology/profiles/*
+methodology/extension/*
+methodology/dist/*
