--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "yarn workspaces foreach run lint",
     "build": "yarn workspaces foreach run build",
     "test": "jest",
-    "data-table": "yarn workspace data-table",
+    "data-table": "yarn workspace @trex/data-table",
     "shared": "yarn workspace shared",
     "backend": "yarn workspace yttrex-backend",
     "guardoni": "yarn workspace guardoni",
