--- a/data-table/package.json
+++ b/data-table/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "tsc": "tsc",
-    "build": "tsc -b",
+    "build": "tsc -b && webpack",
     "watch": "webpack serve",
     "lint": "eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
