--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -20,12 +20,19 @@
     "io-ts-types": "^0.5.16",
     "ts-endpoint": "^2.0.0",
     "ts-io-error": "^2.0.0",
-    "typelevel-ts": "^0.4.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.4",
     "@types/eslint": "^8.2.1",
-    "eslint": "^8.4.1",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "eslint": "^8.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-loader": "^9.2.6",
+    "typelevel-ts": "^0.4.0",
     "webpack": "^5.65.0"
   }
 }
