--- a/methodology/package.json
+++ b/methodology/package.json
@@ -30,8 +30,6 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "csv-parse": "^4.15.3",
     "debug": "^4.3.2",
-    "electron": "^16.0.4",
-    "eslint": "^8.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nconf": "^0.11.3",
@@ -40,18 +38,22 @@
     "puppeteer-core": "^13.0.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "puppeteer-in-electron": "^3.0.5"
+    "puppeteer-in-electron": "^3.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
     "@types/eslint": "^8.2.1",
     "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/webpack-node-externals": "^2.5.3",
     "bufferutil": "^4.0.5",
-    "electron": "^14",
+    "electron": "^16.0.5",
     "electron-reload": "^2.0.0-alpha.1",
     "eslint": "^8.4.1",
     "fsevents": "^2.3.2",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "pkg": "^5.4.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
