--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./build",
     "baseUrl": "./",
     "rootDir": "./src",
+    "allowJs": true,
     "tsBuildInfoFile": "./build/.tsbuildinfo",
     "esModuleInterop": true
   },
