--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "jest.jestCommandLine": "yarn test",
   "jest.autoRun": "off",
-  "eslint.workingDirectories": ["./shared", "./backend", "./YCAI"]
+  "eslint.workingDirectories": ["./shared", "./backend", "./YCAI"],
+  "cSpell.words": ["guardoni"]
 }
