chore: migrate tk ext to yarn & webpack 5

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "workspaces": [
     "shared",
     "backend",
-    "YCAI"
+    "YCAI",
+    "services/tktrex/extension"
   ],
   "packageManager": "yarn@3.1.1",
   "scripts": {
