--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -22,6 +22,15 @@
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.27.1",
     "io-ts": "^2.2.16",
     "typescript": "^4.5.4",
     "webpack": "^5.65.0"
