--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -3,21 +3,27 @@
   "version": "0.2.3",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
+    "build": "tsc && NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "watch": "webpack --watch",
+    "watch": "DEBUG=\"*\" webpack --watch",
     "watch:prod": "NODE_ENV=production webpack --watch",
     "clean": "rm -rf build"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "create-react-class": "^15.7.0",
+    "debug": "^4.3.3",
+    "fp-ts": "^2.11.5",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "nacl": "^0.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/create-react-class": "^15",
+    "@types/debug": "^4.1.7",
     "@types/jquery": "^3",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.37",
