fix: include extension in distro and use electron-log

--- a/methodology/package.json
+++ b/methodology/package.json
@@ -7,14 +7,10 @@
     "pkg": "pkg ./package.json && sh ./bin/post-compile.sh",
     "lint": "eslint ./src",
     "format": "prettier -w ./src",
-    "build": "webpack",
+    "build": "webpack && cp -r extension ./build/",
     "watch": "webpack watch",
     "dev": "electron ./reload.js",
     "start": "electron .",
-    "main:build": "tsc -p tsconfig.json --out ./.webpack/main.js",
-    "forge:start": "electron-forge start --enable-logging",
-    "forge:make": "electron-forge make",
-    "forge:package": "electron-forge package",
     "pack": "DEBUG=electron-builder electron-builder build --dir",
     "dist": "DEBUG=electron-builder electron-builder build -l",
     "postinstall": "electron-builder install-app-deps"
@@ -44,6 +40,7 @@
     "csv-parse": "^4.16.3",
     "debug": "^4.3.3",
     "electron-debug": "^3.2.0",
+    "electron-log": "^4.4.4",
     "electron-puppeteer": "^1.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
